Fixed layout shift issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,22 @@
   font-family: 'DM Sans', sans-serif;
 }
 
+a{
+  outline: none;
+  border:0;
+}
+
 .app {
   min-height: 100vh;
   max-height: auto;
   width: 100vw;
+  position: relative;
   overflow-x: hidden;
 }
 
 .hero {
-  min-height: 35vh;
+  min-height: 300px;
+  max-height: auto;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -32,8 +39,8 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  position: relative;
-  top: -30px;
+  position: absolute;
+  top: 100px;
 }
 
 .hero-content h3 {
@@ -52,6 +59,7 @@
 }
 
 .main-content {
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,10 +71,9 @@
   width: 100%;
   max-width: 600px;
   padding: 0px 20px;
-  position: relative;
-  top: -90px;
+  position: absolute;
+  top: 220px;
   border-radius: 5px;
-  /* background-color: yellow !important; */
 }
 
 .todo-container {
@@ -74,7 +81,6 @@
   width: 100%;
   border-radius: 5px;
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.11);
-  /* background-color: red !important; */
 }
 
 .todo-form input {
@@ -96,7 +102,6 @@
   width: 100%;
   margin-top: 20px;
   border-radius: 5px;
-  /* background-color: green !important; */
 }
 
 .todo-divs {
@@ -104,7 +109,6 @@
   max-height: auto;
   width: 100%;
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.11);
-  /* background-color: purple !important; */
 }
 
 .todo-divs>div {
